--- a/TruthTableV2/TruthTableV2.vcxproj.filters
+++ b/TruthTableV2/TruthTableV2.vcxproj.filters
@@ -18,12 +18,18 @@
     <ClInclude Include="TruthTable.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ANDTable.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TruthTable.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ANDTable.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
